--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,10 +34,11 @@ body {
 }
 
 .block {
-  width: 300px;
+  width: 250px;
   height: 300px;
-  border: 1px solid blue;
+  border: 1px solid rgb(12, 176, 48);
   border-radius: 15px;
   padding: 20px;
   margin: 10px;
+  background-color: #B6F5A4;
 }
